--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>hello, world</h1>
+ 1 <!DOCTYPE html>
+ 2 <html>
+ 3   <head>
+ 4     <title></title>
+ 5   </head>
+ 6   <body>
+ 7     <h1>hello, world</h1>
+ 8     <p>Call me Ishmael.</p>
+10 </html>
