Add placeholders for the TM fix

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>A whale of a greeting</title> 
+    <!-- 登録商標記号の修正に必要なものをここに足してください -->
   </head>
   <body>
     <h1>hello, world</h1>
